add full localization for UA&RU

--- a/TheMovieDataBase1.1/en.lproj/Localizable.strings
+++ b/TheMovieDataBase1.1/en.lproj/Localizable.strings
@@ -19,3 +19,8 @@
 "Trailers" = "Trailers";
 "Movie cast" = "Movie cast";
 "TV Show" = "TV Show";
+"original title" = "original title";
+"Homepage" = "Homepage";
+"min" = "min";
+"On The Air" = "On The Air";
+"Airing today" = "Airing today";
