--- a/TheMovieDataBase1.1/ru.lproj/Localizable.strings
+++ b/TheMovieDataBase1.1/ru.lproj/Localizable.strings
@@ -19,3 +19,8 @@
 "Trailers" = "Трейлеры";
 "Movie cast" = "В ролях";
 "TV Show" = "Сериалы";
+"original title" = "оригинальное название";
+"Homepage" = "Сайт";
+"min" = "мин";
+"On The Air" = "По телевидению";
+"Airing today" = "В эфире";
