--- a/TheMovieDataBase1.1/uk.lproj/Localizable.strings
+++ b/TheMovieDataBase1.1/uk.lproj/Localizable.strings
@@ -19,3 +19,8 @@
 "Trailers" = "Трейлери";
 "Movie cast" = "У ролях";
 "TV Show" = "Серіали";
+"original title" = "оригінальна назва";
+"Homepage" = "Сторiнка";
+"min" = "хв";
+"On The Air" = "Транслюються зараз";
+"Airing today" = "Сьогодні в ефірі";
