add images, fill readme, refactor colors for darmode, small refactor tvShowModel and  localiztion

--- a/TheMovieDataBase1.1/uk.lproj/Localizable.strings
+++ b/TheMovieDataBase1.1/uk.lproj/Localizable.strings
@@ -24,3 +24,5 @@
 "min" = "хв";
 "On The Air" = "Транслюються зараз";
 "Airing today" = "Сьогодні в ефірі";
+"Budget" = "Бюджет";
+"Revenue" = "Збори";
